--- a/login.html
+++ b/login.html
@@ -10,14 +10,14 @@
     <div class="container">
         <img src="images/GXLogo.jpg" alt="logo">
         <h1>GX-Gaming</h1>
-        <form id="loginForm">
-            <label for="username">Nome de Usuário:</label>
-            <input type="text" id="username" name="username" >
-            <div id="usernameError" class="error"></div>
+        <form id="formularioLogin">
+            <label for="nomeUsuario">Nome de Usuário:</label>
+            <input type="text" id="nomeUsuario" name="nomeUsuario">
+            <div id="nomeUsuarioErro" class="error"></div>
 
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" >
-            <div id="passwordError" class="error"></div>
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha">
+            <div id="senhaErro" class="error"></div>
 
             <button type="submit">Entrar</button>
         </form>
