--- a/xbox.html
+++ b/xbox.html
@@ -37,7 +37,7 @@
                     <li><a href="/psn.html">PSN</a></li>
                     <li><a href="/PC.html">Steam</a></li>
                     <li>
-                        <i class="fa-solid fa-cart-shopping vaporwave-icon" onclick="toggleCartVisibility()"></i>
+                        <i class="fa-solid fa-cart-shopping vaporwave-icon" onclick="VisibilidadeCarrinho()"></i>
                         <span id="item-count" class="cart-count" style="font-size: 1.5rem;">0</span> <!-- Contador de itens -->
                     </li>
                     
